# dstroy2-svn

./: LICENSE  Makefile.am  README  acinclude.m4  autogen.sh  configure.in
src/: Makefile.am  dstroy.c  dstroy.h  layer.c  layer.h  maps.h  sprite.c  sprite.h  video.c  video.h
src/.deps/: dstroy.Po  layer.Po  sprite.Po  video.Po
